--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
           aws-region: us-east-1
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 cp ./target/release/rustle s3://files.tylertracy.com --delete
+        run: aws s3 cp ./target/release/rustle s3://files.tylertracy.com
