--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 description = "Play wordle and nerdle in your terminal"
 license-file = "LICENSE"
 readme = "README.md"
+homepage = "https://github.com/tylerthecoder/rustle"
+repository = "https://github.com/tylerthecoder/rustle"
+keywords = ["wordle", "nerdle"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
