--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustle"
+name = "rustle-game"
 version = "0.1.0"
 edition = "2021"
 description = "Play wordle and nerdle in your terminal"
