--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ homepage = "https://github.com/tylerthecoder/rustle"
 repository = "https://github.com/tylerthecoder/rustle"
 keywords = ["wordle", "nerdle"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "rustle"
+path = "src/main.rs"
 
 [dependencies]
 rand = "0.8.4"
